feat: implement UX and security improvements
- Fix z-index overlap of severity dropdown with Monaco editor
- Add enable/disable toggle to Rule Editor header
- Implement bidirectional sync between title input and YAML title field
- Implement bidirectional sync between severity dropdown and YAML level field
- Add search and mapping permission validation for index patterns
- Add credential encryption for OpenSearch passwords using Fernet
- Add js-yaml dependency for YAML parsing in frontend
- Update RuleCreate schema to accept status field

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "js-yaml": "^4.1.1",
     "lucide-react": "^0.378.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.12.10",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
