--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "js-yaml": "^4.1.1",
     "lucide-react": "^0.378.0",
     "react": "^18.3.1",
