feat(index-patterns): add auth token for log shipping endpoints
Each index pattern now has a unique auth token that must be provided
when shipping logs to its endpoint. Tokens are auto-generated on
creation and can be regenerated by admins.

- Add auth_token field to IndexPattern model
- Auto-generate secure tokens using secrets.token_urlsafe(32)
- Add POST /{id}/regenerate-token endpoint (admin only)
- Validate Bearer tokens in /logs/{suffix} endpoints
- Use timing-safe comparison (secrets.compare_digest) for security
- Add frontend UI with token display, copy button, and regenerate
- Include audit logging for token regeneration
- Add migration for existing index patterns

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,12 +21,16 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     environment:
+      # Database
       - POSTGRES_HOST=postgres
       - POSTGRES_PORT=5432
       - POSTGRES_USER=chad
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-devpassword}
       - POSTGRES_DB=chad
+      # Security (CHANGE IN PRODUCTION)
       - JWT_SECRET_KEY=${JWT_SECRET_KEY:-dev-secret-key-change-in-prod}
+      # Frontend URL for SSO redirects (local dev needs explicit URL due to different ports)
+      - FRONTEND_URL=http://localhost:3000
     ports:
       - "8000:8000"
     depends_on:
