--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,13 @@ services:
   backend:
     image: ghcr.io/${GITHUB_REPOSITORY:-local}/chad-backend:${VERSION:-latest}
     environment:
+      # Database
       - POSTGRES_HOST=postgres
       - POSTGRES_PORT=5432
       - POSTGRES_USER=chad
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=chad
+      # Security
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
     ports:
       - "8000:8000"
