feat: add persistent volume for SigmaHQ data
Add chad_data named volume mounted at /data to persist
SigmaHQ git clone across container rebuilds.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -38,6 +38,7 @@ services:
         condition: service_healthy
     volumes:
       - ./backend:/app
+      - chad_data:/data
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
   frontend:
@@ -55,3 +56,4 @@ services:
 
 volumes:
   pgdata:
+  chad_data:
