--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,6 +28,9 @@ pysigma-backend-opensearch>=1.0.0
 # MITRE ATT&CK
 mitreattack-python>=3.0.0
 
+# Background scheduling
+apscheduler>=3.10.0
+
 # OpenSearch client
 opensearch-py==2.5.0
 
