feat: add GeoIP service with MaxMind database support
Add geoip2 dependency and create GeoIPService for IP geolocation:
- MaxMind GeoLite2-City database download and update functionality
- IP lookup returning country, region, city, coordinates, timezone
- Public IP detection to skip private/reserved addresses
- Singleton service instance for shared database reader

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,6 +28,9 @@ pysigma-backend-opensearch>=1.0.0
 # MITRE ATT&CK
 mitreattack-python>=3.0.0
 
+# GeoIP
+geoip2>=4.8.0
+
 # Background scheduling
 apscheduler>=3.10.0
 
