--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
           npm ci
 
       - name: Run lint
+        continue-on-error: true
         run: |
           cd frontend
           npm run lint
