feat: Phase 13a UI polish and system alerting improvements
UI improvements:
- Add max-height/scrolling to DeleteConfirmModal for smaller screens
- Health Alerting section collapsed by default in Index Patterns
- Collapsible Exceptions and Threshold sections in Rule Editor
- Disable restore button for current version in ActivityPanel
- Consolidate GeoIP settings into single card with inline test
- Move Index Pattern/Severity selectors above YAML editor
- Add searchable Sigma field dropdown for exception fields
- Add deployed rules count to MITRE ATT&CK coverage stats
- Add pagination to Alerts page (10/25/50/100 per page)
- Display GeoIP enrichment data in Alert Detail page

Backend improvements:
- System Health service handles no-data scenarios correctly
- Add 11 new system notification event types for operational alerting
- Fix SSO user role test to match role_mapping behavior
- Add rule_parser service for Sigma field extraction

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,10 @@ jobs:
         env:
           WORKSPACE: ${{ github.workspace }}
         run: |
-          docker run --rm \
-            -v "${WORKSPACE}/load-tests/scripts:/scripts" \
-            grafana/k6 run /scripts/log-ingestion.js --dry-run
+          for script in log-ingestion.js baseline.js stress.js; do
+            echo "Validating $script..."
+            docker run --rm \
+              -v "${WORKSPACE}/load-tests/scripts:/scripts" \
+              grafana/k6 inspect /scripts/$script
+          done
+          echo "All k6 scripts validated successfully"
