refactor: move load-tests to tests/load for better organization
Consolidates all testing under the tests/ folder structure.
Updated CI workflow to reference new path.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
           for script in log-ingestion.js baseline.js stress.js; do
             echo "Validating $script..."
             docker run --rm \
-              -v "${WORKSPACE}/load-tests/scripts:/scripts" \
+              -v "${WORKSPACE}/tests/load/scripts:/scripts" \
               grafana/k6 inspect /scripts/$script
           done
           echo "All k6 scripts validated successfully"
