feat: comprehensive production-ready infrastructure and security enhancements
This major enhancement adds production-ready infrastructure including circuit breaker
protection, comprehensive audit logging, enhanced security validation, and complete
testing infrastructure for both frontend and backend.

Security Enhancements:
- Add JWT and session secret key validation with production checks
- Implement encryption key validation with secure defaults detection
- Add field validators to prevent insecure default values in production
- Minimum key length requirements (32 characters) for cryptographic operations
- Warning system for development vs production security configurations

Circuit Breaker Implementation:
- Add advanced circuit breaker pattern for external service resilience
- Circuit breaker management API endpoints for monitoring and control
- Integrate circuit breaker protection with Jira and ThreatFox services
- Configurable thresholds, timeouts, and recovery strategies
- Automatic service health monitoring and failover

Audit Logging System:
- Implement comprehensive audit trail for all critical operations
- Database-backed audit log with searchable event history
- Track user actions, authentication events, and data modifications
- Support for filtering by user, action, entity type, and date range
- Audit log API endpoints for compliance and monitoring

Production-Ready Middleware:
- Request ID tracking for distributed tracing
- Enhanced security headers and CORS configuration
- Request/response logging and timing metrics
- Error handling and exception tracking
- Circuit breaker state monitoring middleware

Database Optimization:
- Optimize connection pooling with proper session management
- Add connection pool size configuration
- Implement proper connection lifecycle management
- Enhanced error handling for database operations

Testing Infrastructure:
- Add integration test framework and directory structure
- Implement frontend testing with Vitest and React

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,6 +29,7 @@ services:
       - POSTGRES_DB=chad
       # Security (CHANGE IN PRODUCTION)
       - JWT_SECRET_KEY=${JWT_SECRET_KEY:-dev-secret-key-change-in-prod}
+      - SESSION_SECRET_KEY=${SESSION_SECRET_KEY:-dev-session-key-change-in-prod}
       # Frontend URL for SSO redirects (local dev needs explicit URL due to different ports)
       - FRONTEND_URL=http://localhost:3000
     ports:
