--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,10 @@ services:
       - POSTGRES_USER=chad
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=chad
-      # Security
+      # Security (REQUIRED - must be set in production)
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - SESSION_SECRET_KEY=${SESSION_SECRET_KEY}
+      - CHAD_ENCRYPTION_KEY=${CHAD_ENCRYPTION_KEY}
     depends_on:
       postgres:
         condition: service_healthy
