--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/diff": "^7.0.2",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.12.10",
@@ -51,6 +54,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "globals": "^15.2.0",
+    "jsdom": "^27.4.0",
     "monaco-editor": "^0.55.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
