--- a/.github/workflows/dependency-scan.yml
+++ b/.github/workflows/dependency-scan.yml
@@ -60,6 +60,7 @@ jobs:
 
       - name: Build Docker image
         uses: docker/build-push-action@v5
+        continue-on-error: true
         with:
           context: ./${{ matrix.image }}
           tags: chad-${{ matrix.image }}:scan
@@ -69,6 +70,7 @@ jobs:
 
       - name: Run Trivy on Docker image
         uses: aquasecurity/trivy-action@master
+        continue-on-error: true
         with:
           image-ref: 'chad-${{ matrix.image }}:scan'
           format: 'sarif'
@@ -79,7 +81,8 @@ jobs:
 
       - name: Upload Trivy Docker results to GitHub Security
         uses: github/codeql-action/upload-sarif@v2
-        if: always()
+        if: success() && hashFiles('trivy-docker-${{ matrix.image }}.sarif') != ''
+        continue-on-error: true
         with:
           sarif_file: 'trivy-docker-${{ matrix.image }}.sarif'
           category: 'trivy-docker-${{ matrix.image }}'
