--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -7,6 +7,7 @@ on:
     branches: [main]
   schedule:
     - cron: '0 0 * * 0'  # Weekly on Sundays at midnight UTC
+  workflow_dispatch:  # Allow manual triggering
 
 permissions:
   contents: read
