fix: use npm ci in CI workflow to preserve lockfile
The CI workflow was deleting package-lock.json and running npm install,
which caused dependency resolution issues when Dependabot opened PRs to
upgrade React and react-dom independently. Using npm ci ensures
deterministic installs from the committed lockfile.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,8 +72,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd frontend
-          rm -f package-lock.json
-          npm install
+          npm ci
 
       - name: Run lint
         run: |
