--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,7 +58,7 @@
     "monaco-editor": "^0.55.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "~5.4.5",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.0.0-alpha.20",
     "vite": "^5.2.11",
     "vitest": "^1.6.0"
