--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,6 +4,15 @@ on:
   push:
     branches: [main]
     tags: ['v*.*.*']
+    paths:
+      - 'backend/app/**'
+      - 'backend/Dockerfile'
+      - 'backend/pyproject.toml'
+      - 'backend/requirements.txt'
+      - 'frontend/src/**'
+      - 'frontend/Dockerfile'
+      - 'frontend/package.json'
+      - 'frontend/vite.config.ts'
   pull_request:
     branches: [main]
   workflow_dispatch:  # Allow manual triggering
