feat: add APP_URL environment variable to docker-compose

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ POSTGRES_PASSWORD=your-secure-password-here
 
 # JWT
 JWT_SECRET_KEY=your-random-secret-key-here
+
+# Application
+# Public URL where CHAD is accessible
+# Used for: CSRF validation, webhook URLs, SSO redirects, email links
+# Example: https://chad.example.com
+APP_URL=https://chad.terrifiedbug.com
