--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
       - SESSION_SECRET_KEY=${SESSION_SECRET_KEY}
       - CHAD_ENCRYPTION_KEY=${CHAD_ENCRYPTION_KEY}
+      # Application URL
+      - APP_URL=${APP_URL:-http://localhost}
     depends_on:
       postgres:
         condition: service_healthy
