fix: add docker-entrypoint.sh to Docker build path triggers
The docker-entrypoint.sh file was not in the path filters, so changes
to it did not trigger Docker rebuilds. This caused PR #53 to merge
without building a new image, leaving deployments with the old
entrypoint script.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'backend/app/**'
       - 'backend/Dockerfile'
+      - 'backend/docker-entrypoint.sh'
       - 'backend/pyproject.toml'
       - 'backend/requirements.txt'
       - 'frontend/src/**'
@@ -18,6 +19,7 @@ on:
     paths:
       - 'backend/app/**'
       - 'backend/Dockerfile'
+      - 'backend/docker-entrypoint.sh'
       - 'backend/pyproject.toml'
       - 'backend/requirements.txt'
       - 'frontend/src/**'
