--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ POSTGRES_PASSWORD=your-secure-password-here
 # JWT
 JWT_SECRET_KEY=your-random-secret-key-here
 
+# Fernet Key
+CHAD_ENCRYPTION_KEY=your-random-secret-key-here
+
 # Application
 # Public URL where CHAD is accessible
 # Used for: CSRF validation, webhook URLs, SSO redirects, email links
