docs: add SSO-only mode documentation
- Document CHAD_SSO_ONLY environment variable in .env.example
- Add setup instructions and recovery steps
- Update docker-compose.yml comments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - CHAD_ENCRYPTION_KEY=${CHAD_ENCRYPTION_KEY}
       # Application URL
       - APP_URL=${APP_URL:-http://localhost}
+      # - CHAD_SSO_ONLY=true  # Enable SSO-only authentication (optional)
     depends_on:
       postgres:
         condition: service_healthy
