--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ CHAD_ENCRYPTION_KEY=your-random-secret-key-here
 # Used for: CSRF validation, webhook URLs, SSO redirects, email links
 # Example: https://chad.example.com
 APP_URL=https://chad.example.com
+
+# SSO-Only Authentication Mode (optional)
+# Set to true to disable local login and require SSO authentication
+# When enabled, users must sign in via SSO (configured in GUI → Settings)
+# Default: false (both local and SSO login available)
+CHAD_SSO_ONLY=false
