feat: add configurable log level to reduce production logging noise
Add LOG_LEVEL environment variable to control global logging verbosity.
Defaults to WARNING for production-friendly quiet logs.

**Problem:**
- Production deployments generate excessive logging noise
- Health checks log every minute (alert count queries)
- OpenSearch HTTP requests logged for every call
- SSL warning logs repeatedly on every client creation
- Uvicorn access logs add to the noise

**Solution:**
- Add LOG_LEVEL environment variable (default: WARNING)
- Validate log level (DEBUG/INFO/WARNING/ERROR/CRITICAL)
- Update logging setup to use configurable level
- Fix SSL warning to log only once at startup
- Configure uvicorn to respect LOG_LEVEL

**Changes:**

1. **app/core/config.py**: Add LOG_LEVEL field with validation
   - Default: WARNING (production-friendly)
   - Validates against standard Python log levels
   - Case-insensitive input

2. **app/core/logging.py**: Use configurable log level
   - setup_logging() now uses settings.LOG_LEVEL
   - configure_development_logging(level) accepts level parameter
   - configure_production_logging(level) accepts level parameter

3. **app/services/opensearch.py**: SSL warning logs once
   - Add module-level _ssl_warning_logged flag
   - Only log warning on first create_client() call
   - Maintains WARNING level (important security message)

4. **Dockerfile**: Configure uvicorn log level
   - Use $LOG_LEVEL environment variable
   - Uvicorn respects logging configuration

5. **docker-compose.yml**: Production defaults
   - LOG_LEVEL=WARNING (quiet logs)

6. **docker-compose.dev.yml**: Development defaults
   - LOG_LEVEL=INFO (verbose logs for debugging)

**Behavior:**

Production (LOG_LEVEL=WARNING):
- ✅ Only WARNING and ERROR logs appear
- ✅ Health check alert count queries silenced
- ✅ OpenSearch HTTP request logs silenced
- ✅ Uvicorn access logs silenced
- ✅ SSL warning shows once at startup

Development (LOG_LEVEL=INFO):
- ✅ All logs visible fo

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,4 +24,5 @@ RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 
 # Default command (overridden in docker-compose for dev)
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Use LOG_LEVEL environment variable to control logging verbosity
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port 8000 --log-level $LOG_LEVEL"]
