fix: increase request size limits for log ingestion
Nginx was using default 1MB limit causing 413 errors when Vector
sends batched logs. Increased both nginx and FastAPI middleware
limits to 50MB to support high-volume log ingestion pipelines.

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -3,6 +3,12 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Allow large payloads for log ingestion from Vector/Fluentd.
+    # 50MB is sufficient - for high-volume ingestion (1TB+/day), tune the
+    # shipper's batch settings (max_bytes, concurrency) rather than increasing
+    # this limit. Larger limits risk memory spikes and request timeouts.
+    client_max_body_size 50m;
+
     # Serve static files
     location / {
         try_files $uri $uri/ /index.html;
