perf: increase nginx body buffer to avoid disk I/O for log ingestion
Default buffer (8-16KB) caused every Vector batch to be written to
temp files. 5MB buffer keeps typical batches in memory.

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,6 +9,12 @@ server {
     # this limit. Larger limits risk memory spikes and request timeouts.
     client_max_body_size 50m;
 
+    # Buffer request bodies in memory to avoid disk I/O for log ingestion.
+    # 5MB covers typical Vector batches; larger payloads still work but hit disk.
+    # For high-volume (1TB+/day): set Vector max_bytes <= this value and use
+    # high concurrency (10-50) for throughput. Buffer is per-request.
+    client_body_buffer_size 5m;
+
     # Serve static files
     location / {
         try_files $uri $uri/ /index.html;
