--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       POSTGRES_USER: chad
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: chad
+    # Log level: warning (default, quiet) or log (verbose, shows checkpoints)
+    command: ["postgres", "-c", "log_min_messages=${POSTGRES_LOG_LEVEL:-warning}"]
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
