--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -3,6 +3,18 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Allow large payloads for log ingestion from Vector/Fluentd.
+    # 50MB is sufficient - for high-volume ingestion (1TB+/day), tune the
+    # shipper's batch settings (max_bytes, concurrency) rather than increasing
+    # this limit. Larger limits risk memory spikes and request timeouts.
+    client_max_body_size 50m;
+
+    # Buffer request bodies in memory to avoid disk I/O for log ingestion.
+    # 5MB covers typical Vector batches; larger payloads still work but hit disk.
+    # For high-volume (1TB+/day): set Vector max_bytes <= this value and use
+    # high concurrency (10-50) for throughput. Buffer is per-request.
+    client_body_buffer_size 5m;
+
     # Serve static files
     location / {
         try_files $uri $uri/ /index.html;
