feat: platform improvements v2 with advanced reporting and config backup
Implements Phase 2 and Phase 3 features from platform improvements roadmap:

Advanced Reporting (Task 10):
- PDF/CSV export for Alert Summary reports with date filtering
- PDF/CSV export for Rule Coverage reports
- Reports include severity distribution, status breakdown, ATT&CK techniques

Config Import/Export (Task 11):
- Full configuration backup to JSON including rules, correlations, webhooks
- Import with conflict resolution (skip, overwrite, rename)
- Dry-run preview mode before applying imports

Bug fixes for export functionality:
- Fix enum value handling for source, operator, origin fields
- Parse YAML content to extract tags for rule coverage reports
- Improve Settings backup UI with styled file upload area
- Make export buttons consistent (outline variant)
- Remove unused date picker from Rule export (rules are not time-based)

Additional features implemented:
- Correlation rule snooze functionality
- User notification preferences
- Exception grouping by group_id
- IP allowlist and rate limiting for API
- WebSocket improvements for real-time updates
- Index pattern field discovery enhancements

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -50,6 +50,9 @@ ruff==0.14.14
 # Security
 nh3>=0.2.17  # Fast HTML sanitization (binding to Rust ammonia)
 
+# Reporting
+reportlab>=4.2.0  # PDF generation
+
 # Logging
 structlog>=24.1.0  # Structured logging
 python-json-logger>=2.0.7  # JSON logging fallback
