--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,7 +26,7 @@ on:
       - 'frontend/Dockerfile'
       - 'frontend/package.json'
       - 'frontend/vite.config.ts'
-  workflow_dispatch:  # Allow manual triggering
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
@@ -34,7 +34,42 @@ env:
   IMAGE_NAME_BACKEND: ${{ github.repository }}/chad-backend
 
 jobs:
-  build-and-push:
+  # PR builds: single arch, no push, fast feedback
+  build-pr:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build frontend (validation only)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: false
+          platforms: linux/amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build backend (validation only)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          push: false
+          platforms: linux/amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # Production builds: native runners for each architecture
+  build-amd64:
+    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -54,16 +89,83 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Build only for linux/amd64 on PRs for faster feedback
-      # Full multi-arch build only on main branch
-      - name: Set build platforms
-        id: platforms
-        run: |
-          if [ "${{ github.event_name }}" == "pull_request" ]; then
-            echo "platforms=linux/amd64" >> $GITHUB_OUTPUT
-          else
-            echo "platforms=linux/amd64,linux/arm64" >> $GITHUB_OUTPUT
-          fi
+      - name: Build and push frontend (amd64)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: true
+          platforms: linux/amd64
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_FRONTEND }}:${{ github.sha }}-amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build and push backend (amd64)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          push: true
+          platforms: linux/amd64
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_BACKEND }}:${{ github.sha }}-amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  build-arm64:
+    if: github.event_name != 'pull_request'
+    runs-on: ubuntu-24.04-arm
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push frontend (arm64)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: true
+          platforms: linux/arm64
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_FRONTEND }}:${{ github.sha }}-arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build and push backend (arm64)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          push: true
+          platforms: linux/arm64
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_BACKEND }}:${{ github.sha }}-arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # Merge architecture-specific images into multi-arch manifests
+  create-manifests:
+    if: github.event_name != 'pull_request'
+    needs: [build-amd64, build-arm64]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata for frontend
         id: meta-frontend
@@ -77,17 +179,6 @@ jobs:
             type=sha,prefix=
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build and push frontend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta-frontend.outputs.tags }}
-          labels: ${{ steps.meta-frontend.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: ${{ steps.platforms.outputs.platforms }}
-
       - name: Extract metadata for backend
         id: meta-backend
         uses: docker/metadata-action@v5
@@ -100,13 +191,29 @@ jobs:
             type=sha,prefix=
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build and push backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta-backend.outputs.tags }}
-          labels: ${{ steps.meta-backend.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: ${{ steps.platforms.outputs.platforms }}
+      - name: Create and push frontend multi-arch manifest
+        env:
+          FRONTEND_TAGS: ${{ steps.meta-frontend.outputs.tags }}
+          FRONTEND_AMD64: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_FRONTEND }}:${{ github.sha }}-amd64
+          FRONTEND_ARM64: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_FRONTEND }}:${{ github.sha }}-arm64
+        run: |
+          echo "$FRONTEND_TAGS" | while read -r TAG; do
+            echo "Creating manifest for: $TAG"
+            docker buildx imagetools create -t "$TAG" "$FRONTEND_AMD64" "$FRONTEND_ARM64"
+          done
+
+      - name: Create and push backend multi-arch manifest
+        env:
+          BACKEND_TAGS: ${{ steps.meta-backend.outputs.tags }}
+          BACKEND_AMD64: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_BACKEND }}:${{ github.sha }}-amd64
+          BACKEND_ARM64: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_BACKEND }}:${{ github.sha }}-arm64
+        run: |
+          echo "$BACKEND_TAGS" | while read -r TAG; do
+            echo "Creating manifest for: $TAG"
+            docker buildx imagetools create -t "$TAG" "$BACKEND_AMD64" "$BACKEND_ARM64"
+          done
+
+      - name: Summary
+        run: |
+          echo "Multi-arch manifests created successfully"
+          echo "Architecture-specific tags remain in registry for layer deduplication"
