--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,28 +4,8 @@ on:
   push:
     branches: [main]
     tags: ['v*.*.*']
-    paths:
-      - 'backend/app/**'
-      - 'backend/Dockerfile'
-      - 'backend/docker-entrypoint.sh'
-      - 'backend/pyproject.toml'
-      - 'backend/requirements.txt'
-      - 'frontend/src/**'
-      - 'frontend/Dockerfile'
-      - 'frontend/package.json'
-      - 'frontend/vite.config.ts'
   pull_request:
     branches: [main]
-    paths:
-      - 'backend/app/**'
-      - 'backend/Dockerfile'
-      - 'backend/docker-entrypoint.sh'
-      - 'backend/pyproject.toml'
-      - 'backend/requirements.txt'
-      - 'frontend/src/**'
-      - 'frontend/Dockerfile'
-      - 'frontend/package.json'
-      - 'frontend/vite.config.ts'
   workflow_dispatch:
 
 env:
@@ -34,9 +14,32 @@ env:
   IMAGE_NAME_BACKEND: ${{ github.repository }}/chad-backend
 
 jobs:
+  # Detect which files changed to determine if build is needed
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      should_build: ${{ steps.filter.outputs.code }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            code:
+              - 'backend/app/**'
+              - 'backend/Dockerfile'
+              - 'backend/docker-entrypoint.sh'
+              - 'backend/pyproject.toml'
+              - 'backend/requirements.txt'
+              - 'frontend/src/**'
+              - 'frontend/Dockerfile'
+              - 'frontend/package.json'
+              - 'frontend/vite.config.ts'
+
   # PR builds: single arch, no push, fast feedback
   build-pr:
-    if: github.event_name == 'pull_request'
+    needs: changes
+    if: github.event_name == 'pull_request' && needs.changes.outputs.should_build == 'true'
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -69,7 +72,8 @@ jobs:
 
   # Production builds: native runners for each architecture
   build-amd64:
-    if: github.event_name != 'pull_request'
+    needs: changes
+    if: github.event_name != 'pull_request' && needs.changes.outputs.should_build == 'true'
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -110,7 +114,8 @@ jobs:
           cache-to: type=gha,mode=max
 
   build-arm64:
-    if: github.event_name != 'pull_request'
+    needs: changes
+    if: github.event_name != 'pull_request' && needs.changes.outputs.should_build == 'true'
     runs-on: ubuntu-24.04-arm
     permissions:
       contents: read
@@ -152,8 +157,8 @@ jobs:
 
   # Merge architecture-specific images into multi-arch manifests
   create-manifests:
-    if: github.event_name != 'pull_request'
-    needs: [build-amd64, build-arm64]
+    needs: [changes, build-amd64, build-arm64]
+    if: github.event_name != 'pull_request' && needs.changes.outputs.should_build == 'true'
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -217,3 +222,50 @@ jobs:
         run: |
           echo "Multi-arch manifests created successfully"
           echo "Architecture-specific tags remain in registry for layer deduplication"
+
+  # Gate job for branch protection - always reports a status
+  # Set this as your required check instead of individual build jobs
+  docker-build-status:
+    runs-on: ubuntu-latest
+    needs: [changes, build-pr, build-amd64, build-arm64, create-manifests]
+    if: always()
+    steps:
+      - name: Check build status
+        env:
+          SHOULD_BUILD: ${{ needs.changes.outputs.should_build }}
+          EVENT_NAME: ${{ github.event_name }}
+          BUILD_PR_RESULT: ${{ needs.build-pr.result }}
+          BUILD_AMD64_RESULT: ${{ needs.build-amd64.result }}
+          BUILD_ARM64_RESULT: ${{ needs.build-arm64.result }}
+          CREATE_MANIFESTS_RESULT: ${{ needs.create-manifests.result }}
+        run: |
+          # If no code changes, build was legitimately skipped
+          if [[ "$SHOULD_BUILD" != "true" ]]; then
+            echo "✅ Docker build skipped - no code changes detected"
+            exit 0
+          fi
+
+          # For PRs, check the PR build job
+          if [[ "$EVENT_NAME" == "pull_request" ]]; then
+            if [[ "$BUILD_PR_RESULT" != "success" ]]; then
+              echo "❌ PR build failed"
+              exit 1
+            fi
+            echo "✅ PR build succeeded"
+            exit 0
+          fi
+
+          # For pushes to main, check production builds
+          if [[ "$BUILD_AMD64_RESULT" != "success" ]]; then
+            echo "❌ AMD64 build failed"
+            exit 1
+          fi
+          if [[ "$BUILD_ARM64_RESULT" != "success" ]]; then
+            echo "❌ ARM64 build failed"
+            exit 1
+          fi
+          if [[ "$CREATE_MANIFESTS_RESULT" != "success" ]]; then
+            echo "❌ Manifest creation failed"
+            exit 1
+          fi
+          echo "✅ All production builds succeeded"
