--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,6 +38,9 @@ apscheduler>=3.10.0
 # OpenSearch client
 opensearch-py==2.5.0
 
+# Redis for distributed locking and queue management
+redis>=5.0.0
+
 # Testing
 pytest==8.2.0
 pytest-asyncio==0.23.6
