--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
 
   backend:
     image: ghcr.io/terrifiedbug/chad/chad-backend:${VERSION:-latest}
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers ${UVICORN_WORKERS:-4}
     environment:
       # Database
       - POSTGRES_HOST=postgres
