--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,35 @@ services:
     volumes:
       - chad_data:/data
 
+  worker:
+    image: ghcr.io/terrifiedbug/chad/chad-backend:${VERSION:-latest}
+    command: python -m app.worker
+    environment:
+      # Database
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=chad
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=chad
+      # Redis
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379}
+      # Security (REQUIRED - must be set in production)
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - SESSION_SECRET_KEY=${SESSION_SECRET_KEY}
+      - CHAD_ENCRYPTION_KEY=${CHAD_ENCRYPTION_KEY}
+      # Logging
+      - LOG_LEVEL=${LOG_LEVEL:-warning}
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      backend:
+        condition: service_started
+    deploy:
+      replicas: ${WORKER_REPLICAS:-2}
+    restart: unless-stopped
+
   frontend:
     image: ghcr.io/terrifiedbug/chad/chad-frontend:${VERSION:-latest}
     ports:
