feat: add env config, fix worker Redis Streams handling
- Update docker-compose files with DATABASE_POOL_SIZE/MAX_OVERFLOW vars
- Remove worker profile restriction in dev (starts by default)
- Add get_client_from_settings() for worker OpenSearch access
- Fix worker to scan for actual streams (xreadgroup doesn't support wildcards)
- Update .env.example with all new scaling configuration vars

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,16 @@
 # Database
 POSTGRES_PASSWORD=your-secure-password-here
+# Connection pool settings (tune for high-load scenarios)
+DATABASE_POOL_SIZE=20
+DATABASE_MAX_OVERFLOW=40
 
-# JWT
+# Redis (required for distributed locking and queue processing)
+REDIS_URL=redis://redis:6379
+
+# Security Keys
 JWT_SECRET_KEY=your-random-secret-key-here
-
-# Fernet Key
-CHAD_ENCRYPTION_KEY=your-random-secret-key-here
+SESSION_SECRET_KEY=your-random-session-key-here
+CHAD_ENCRYPTION_KEY=your-random-encryption-key-here
 
 # Application
 # Public URL where CHAD is accessible
@@ -18,3 +23,13 @@ APP_URL=https://chad.example.com
 # When enabled, users must sign in via SSO (configured in GUI → Settings)
 # Default: false (both local and SSO login available)
 CHAD_SSO_ONLY=false
+
+# Scaling Configuration
+# Number of uvicorn workers for the backend API
+UVICORN_WORKERS=4
+# Number of queue worker replicas (production only)
+WORKER_REPLICAS=2
+
+# Logging
+# Options: debug, info, warning, error
+LOG_LEVEL=warning
